@@ -1,5 +1,12 @@
 2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[grok] Fix bug: Check that new branch was forward referenced.
+
+	* b-grok.c (full): Keep track of branch references;
+	check that new branches are properly forward-referenced.
+
+2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[grok] Fix bug: Check that branches begin w/ branch point.
 
 	* b-grok.c (full <revisions>): Check that
